2007-02-17 Braden McDaniel  <braden@endoframe.com>

	* configure.ac: Ensure libjs only gets used when configuring
	--with-libjs.

2007-02-17 Braden McDaniel  <braden@endoframe.com>

	Look for seamonkey-js.pc and seamonkey-plugin.pc.

	* configure.ac
	* mozilla-plugin/configure.ac

2007-02-11 Braden McDaniel  <braden@endoframe.com>

	Doc-comment improvements; apply @tparam.

	* doc/Doxyfile: Updated to Doxygen 1.5.5.
	* src/libopenvrml/openvrml/basetypes.cpp
	* src/libopenvrml/openvrml/event.cpp
	* src/libopenvrml/openvrml/exposedfield.cpp
	* src/libopenvrml/openvrml/field_value.cpp
	* src/libopenvrml/openvrml/node.cpp
	* src/libopenvrml/openvrml/node_impl_util.cpp
	* src/libopenvrml/openvrml/node_impl_util.h

2007-02-05 Braden McDaniel  <braden@endoframe.com>

	Updates for 0.17.5 release.

	* NEWS
	* README
	* configure.ac
	* doc/Doxyfile
	* ide-projects/Windows/VisualC9_0/OpenVRML/openvrml/openvrml.rc
	* ide-projects/Windows/VisualC9_0/OpenVRML/openvrml/openvrml.vcproj
	* ide-projects/Windows/VisualC9_0/OpenVRML/openvrml-gl/openvrml-gl.rc
	* mozilla-plugin/configure.ac
	* src/Makefile.am: Updated libopenvrml libtool library version to
	8:4:0.

2007-01-29 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/openvrml/browser.cpp
	(openvrml::proto_impl_cloner::clone_node(const
	boost::intrusive_ptr<node> &)): Don't clone subtrees from the
	initial_values map.

2007-01-29 Braden McDaniel  <braden@endoframe.com>

	Changed configure not to apply -rpath for the Gecko runtime
	library directory by default.

	* README
	* configure.ac

2007-01-29 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/openvrml/script.cpp
	(openvrml::script_node::update(double)): Use a const_iterator when
	iterating over the eventout_map_.

2007-01-29 Braden McDaniel  <braden@endoframe.com>

	Moved node::add_ref and node::release out-of-line.

	* src/libopenvrml/openvrml/node.cpp
	(openvrml::node::add_ref() const): Moved from node.h.